--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.1
 Django==3.0.8
 django-bootstrap4==2.2.0
 django-fontawesome-5==1.0.18
+gunicorn==20.0.4
 Pillow==7.2.0
 psycopg2==2.8.5
 pytz==2020.1
